--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "crypto-js": "^3.1.6",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "json-bigint": "^0.2.0",
     "morgan": "~1.7.0",
