--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "crypto-js": "^3.1.6",
     "big-integer": "*",
     "angular": "^1.5.8",
-    "cryptocoin": "^0.3.0"
+    "cryptocoin": "^0.3.0",
+    "angular-route": "^1.5.9",
+    "bootstrap": "^3.3.7"
   }
 }
