--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.7.0",
     "nodemon": "^1.10.2",
     "request": "^2.75.0",
+    "secrets.js": "^0.1.8",
     "serve-favicon": "~2.3.0"
   }
 }
